--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Anirudh Vemula, PE | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Anirudh Vemula, PE | Software Developer" />
+  <meta property="og:title" content="Anirudh Vemula, PE | Project Manager" />
+  <meta property="og:description" content="Project Manager" />
+  <meta property="og:url" content="https://anirudhvemula.github.io/" />
+  <meta property="og:site_name" content="Anirudh Vemula, PE | Project Manager" />
   <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@anirudhvemula" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:description" content="Project Manager" />
+  <meta name="twitter:url" content="https://twitter.com/anirudhvemula" />
   <meta name="author" content="Anirudh Vemula, PE" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
