--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/anirudhvemula" target="_blank">
+              <a href="http://linkedin.com/in/anirudh-vemula" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -225,13 +225,13 @@
                 </button>
               </a>
 
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+              <!-- <a href="https://angel.co/u/anirudh_vemula" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
               </a> -->
 
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <!-- <a href="http://linkedin.com/in/anirudh-vemula" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -684,7 +684,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/anirudhvemula/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -719,7 +719,7 @@ of each drug container to estimate the degradation of the drug.
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/anirudhvemula/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -980,29 +980,23 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Anirudh" data-position="top" data-tooltip="Call Anirudh"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Anirudh">+1 ‪(210) 900-2707‬</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
-        </p>
-        <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Anirudh on GitHub" href="http://github.com/anirudhvemula" target="_blank"
+            data-position="top" data-tooltip="View Anirudh on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Anirudh on Github" href="http://github.com/anirudhvemula" class="hoverline"
+              target="_blank">github.com/anirudhvemula</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Anirudh on LinkedIn" href="http://linkedin.com/in/anirudh-vemula" target="_blank"
+            data-position="top" data-tooltip="View Anirudh on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Anirudh on LinkedIn" href="http://linkedin.com/in/anirudh-vemula"
+              class="hoverline" target="_blank">Linkedin.com/in/anirudh-vemula</a></a>
         </p>
       </div>
     </section>
