--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <meta name="twitter:url" content="https://twitter.com/anirudhvemula" />
   <meta name="author" content="Anirudh Vemula, PE" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
-  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
