--- a/index.html
+++ b/index.html
@@ -190,11 +190,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h1 style="color:#fff"><span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
-			  <h2>I'm<span class="teal"> Anirudh Vemula, PE</span></h2>
+              <h1 style="color:#fff"><span class="typing" style="font-weight: 300; color:#004d40"></span></h1>
+			  <h2>I'm <span class="teal">Anirudh Vemula, PE</span></h2>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
             </div>
+			<br>
+			<h5>Use side navigation or scroll down to continue reading...</h5>
             <div class="social">
               <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
                 <button class="icon-btn linkedin">
