--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Hi...", "Namaste नमस्ते...", "Bonjour...", "Hola...", "Guten Tag...", "Ahlan...", "Nǐ hǎo...", "నమస్కారం...", "வணக்கம்...", "Marhaba (مرحبا)..."]
+      strings: ["Hi...", "Namaste नमस्ते...", "Bonjour...", "Hola...", "Guten Tag...", "Ahlan...", "Nǐ hǎo...", "నమస్కారం...", "வணக்கம்...", "Marhaba (مرحبا)..."],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
