--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40"></span></i></h1>
+              <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40"></span></i></h1><br><br><br>
 			  <h4>I'm <span class="teal">Anirudh "Ani" Vemula, PE</span></h4><br>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
@@ -973,7 +973,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Hi...", "Namaste नमस्ते...", "Bonjour...", "Hola...", "Welcome...", "Guten Tag...", "Ahlan...", "Nǐ hǎo...", "Hello...", "నమస్కారం...", "வணக்கம்...", "Marhaba (مرحبا)..."],
+      strings: ["Hi...", "Namaste नमस्ते...", "Bonjour...", "Hola...", "Welcome...", "Guten Tag...", "Ahlan...", "Nǐ hǎo...", "Hello...", "నమస్కారం...", "வணக்கம்...", "Marhaba مرحبا..."],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
