--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40"></span></i></h1>
-			  <h4>I'm <span class="teal">Anirudh "Ani" Vemula, PE</span>!</h4><br>
-              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
+			  <h4>I'm Anirudh "Ani" Vemula, PE!</h4><br>
+              <!-- <span class="teal"></span> -->
               <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
             </div>
 			<br><br>
