--- a/index.html
+++ b/index.html
@@ -64,7 +64,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Navigation Menu-->
   <!-- Nav class 1 -->
   <nav class="hide-on-small-only">
-    <ul class="side-nav fixed section table-of-contents">
+    <ul class="side-nav fixed table-of-contents">
+  <li class="logo"><a id="logo-container" aria-label="Navigate to the beginning of the page"
+      href="#intro" class="brand-logo teal-text">Anirudh Vemula</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#experience">Experience</a></li>
+  <li><a href="#skills">Skills</a></li>
+
+  <!-- New Sections -->
+  <li><a href="#certifications">Certifications</a></li>
+  <li><a href="#memberships">Memberships</a></li>
+  <li><a href="#publications">Publications</a></li>
+  <li><a href="#blogs">Blogs & Articles</a></li>
+  <li><a href="#honors">Honors & Awards</a></li>
+  <li><a href="#recommendations">Recommendations</a></li>
+
+  <li><a href="#contact">Contact</a></li>
+</ul>
+
 
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
@@ -941,6 +958,90 @@ of each drug container to estimate the degradation of the drug.
         </div>
       </div>
     </section>
+<!-- CERTIFICATIONS -->
+<section id="certifications" class="section">
+  <h3 class="page-title teal">Certifications</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Licensed Professional Engineer (PE)</span>
+        <p>California Board for Professional Engineers (License #XXXXX)</p>
+      </div>
+    </div>
+    <!-- Add more certs as needed -->
+  </div>
+</section>
+
+<!-- MEMBERSHIPS -->
+<section id="memberships" class="section">
+  <h3 class="page-title teal">Memberships</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">ASCE</span>
+        <p>Active Member, U.S. + India chapters</p>
+      </div>
+    </div>
+    <!-- Add more -->
+  </div>
+</section>
+
+<!-- PUBLICATIONS -->
+<section id="publications" class="section">
+  <h3 class="page-title teal">Publications</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Technical Paper</span>
+        <p>“Title of Paper” – Journal / Conference, Year</p>
+        <a href="#" target="_blank" class="hoverline">Read more</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- BLOGS & ARTICLES -->
+<section id="blogs" class="section">
+  <h3 class="page-title teal">Blogs & Articles</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Systems Thinking in Architecture</span>
+        <p>Medium / LinkedIn – 2025</p>
+        <a href="#" target="_blank" class="hoverline">Read Article</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- HONORS & AWARDS -->
+<section id="honors" class="section">
+  <h3 class="page-title teal">Honors & Awards</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Pratibha Award</span>
+        <p>Government of Andhra Pradesh – Year</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- LINKEDIN RECOMMENDATIONS -->
+<section id="recommendations" class="section">
+  <h3 class="page-title teal">LinkedIn Recommendations</h3>
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <blockquote>
+          “Anirudh is an exceptional leader with strong systems thinking skills...”  
+          <footer>– Colleague Name, Role</footer>
+        </blockquote>
+      </div>
+    </div>
+    <!-- Add more quotes -->
+  </div>
+</section>
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
