--- a/index.html
+++ b/index.html
@@ -64,22 +64,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Navigation Menu-->
   <!-- Nav class 1 -->
   <nav class="hide-on-small-only">
-    <ul class="side-nav fixed table-of-contents">
-  <li class="logo"><a id="logo-container" aria-label="Navigate to the beginning of the page"
-      href="#intro" class="brand-logo teal-text">Anirudh Vemula</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#experience">Experience</a></li>
-  <li><a href="#skills">Skills</a></li>
+<ul class="side-nav fixed table-of-contents">
+<ul class="side-nav fixed table-of-contents">
+  <!-- Profile + Name -->
+  <li class="logo">
+    <a id="logo-container" aria-label="Navigate to the beginning of the page"
+       href="#intro" class="brand-logo teal-text">
+      <div class="profile-pic">
+        <img src="assets/img/profile.jpg" alt="Anirudh Vemula" />
+      </div>
+      <span>Anirudh Vemula</span>
+    </a>
+  </li>
+
+  <!-- Navigation Links -->
+  <li><a href="#about"><i class="material-icons">person</i> About</a></li>
+  <li><a href="#experience"><i class="material-icons">work</i> Experience</a></li>
+  <li><a href="#skills"><i class="material-icons">build</i> Skills</a></li>
 
   <!-- New Sections -->
-  <li><a href="#certifications">Certifications</a></li>
-  <li><a href="#memberships">Memberships</a></li>
-  <li><a href="#publications">Publications</a></li>
-  <li><a href="#blogs">Blogs & Articles</a></li>
-  <li><a href="#honors">Honors & Awards</a></li>
-  <li><a href="#recommendations">Recommendations</a></li>
+  <li><a href="#certifications"><i class="material-icons">verified</i> Certifications</a></li>
+  <li><a href="#memberships"><i class="material-icons">group</i> Memberships</a></li>
+  <li><a href="#publications"><i class="material-icons">menu_book</i> Publications</a></li>
+  <li><a href="#blogs"><i class="material-icons">edit</i> Blogs & Articles</a></li>
+  <li><a href="#honors"><i class="material-icons">emoji_events</i> Honors & Awards</a></li>
+  <li><a href="#recommendations"><i class="material-icons">thumb_up</i> Recommendations</a></li>
 
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="#contact"><i class="material-icons">email</i> Contact</a></li>
+</ul>
+
 </ul>
 
 
