--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Anirudh Vemula, PE | Project Manager</title>
@@ -66,17 +67,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <nav class="hide-on-small-only">
 <ul class="side-nav fixed table-of-contents">
 <ul class="side-nav fixed table-of-contents">
-  <!-- Profile + Name -->
-<li class="logo">
-  <a id="logo-container" aria-label="Back to top"
-     href="#intro" class="brand-logo teal-text tooltipped"
-     data-position="right" data-tooltip="Back to top">
-    <div class="profile-pic">
-      <img src="assets/img/passport-new.jpg" alt="Anirudh Vemula" />
-    </div>
-    <span>Anirudh Vemula</span>
-  </a>
-</li>
+<ul id="nav-mobile" class="side-nav fixed table-of-contents">
+  <li class="logo">
+    <a href="#intro" id="logo-container" class="brand-logo">
+      <div class="profile-pic" title="Back to Top">
+        <img src="assets/img/passport-new.jpg" alt="Ani Headshot">
+      </div>
+    </a>
+  </li>
+  <li><a href="#about"><i class="fas fa-user"></i> <span>About</span></a></li>
+  <li><a href="#experience"><i class="fas fa-briefcase"></i> <span>Experience</span></a></li>
+  <li><a href="#skills"><i class="fas fa-code"></i> <span>Skills</span></a></li>
+  <li><a href="#certifications"><i class="fas fa-certificate"></i> <span>Certifications</span></a></li>
+  <li><a href="#memberships"><i class="fas fa-users"></i> <span>Memberships</span></a></li>
+  <li><a href="#publications"><i class="fas fa-book"></i> <span>Publications</span></a></li>
+  <li><a href="#blogs"><i class="fas fa-pen-nib"></i> <span>Blogs</span></a></li>
+  <li><a href="#awards"><i class="fas fa-trophy"></i> <span>Awards</span></a></li>
+  <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i> <span>Recommendations</span></a></li>
+  <li><a href="#contact"><i class="fas fa-envelope"></i> <span>Contact</span></a></li>
+</ul>
+
 
 
   <!-- Navigation Links -->
