--- a/index.html
+++ b/index.html
@@ -239,17 +239,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 			<br><br>
 			<h5>Use side navigation or scroll down to continue reading...</h5><br>
-            <div class="social">
-              <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
-                <button class="icon-btn linkedin">
-                  <i class="fa fa-linkedin"></i>
-                </button>
-              </a>
-              <a href="https://github.com/anirudhvemula/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
-                </button>
-              </a>
+<div class="social">
+  <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
+    <button class="icon-btn linkedin">
+      <i class="fab fa-linkedin"></i>
+    </button>
+  </a>
+  <a href="https://github.com/anirudhvemula/" target="_blank">
+    <button class="icon-btn github">
+      <i class="fab fa-github"></i>
+    </button>
+  </a>
+</div>
+
 
               <!-- <a href="https://angel.co/u/anirudh_vemula" target="_blank">
                 <button class="icon-btn angellist">
@@ -1095,7 +1097,7 @@ of each drug container to estimate the degradation of the drug.
     </section>
   </main>
 
-  <!-- typed.js -->
+  <!-- typed.js 
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
@@ -1105,6 +1107,34 @@ of each drug container to estimate the degradation of the drug.
       backSpeed: 40
     });
   </script>
+-->
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var typed = new Typed('.typing', {
+      strings: [
+        "Hi...",
+        "Namaste नमस्ते...",
+        "Bonjour...",
+        "Hola...",
+        "Welcome...",
+        "Guten Tag...",
+        "Ahlan...",
+        "Nǐ hǎo...",
+        "Hello...",
+        "నమస్కారం...",
+        "வணக்கம்...",
+        "Marhaba مرحبا..."
+      ],
+      typeSpeed: 100,      // typing speed
+      backSpeed: 50,       // backspacing speed
+      backDelay: 1500,     // pause before deleting
+      startDelay: 500,     // slight delay on first greeting
+      loop: true,          // keeps rotating forever
+      smartBackspace: true // only erases what’s different
+    });
+  });
+</script>
 
 
   <!-- jQuery-->
