--- a/index.html
+++ b/index.html
@@ -63,165 +63,60 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
   <!-- Navigation Menu-->
-  <!-- Nav class 1 -->
-  <nav class="hide-on-small-only">
-<ul class="side-nav fixed table-of-contents">
-<ul class="side-nav fixed table-of-contents">
-<ul id="nav-mobile" class="side-nav fixed table-of-contents">
-  <li class="logo">
-    <a href="#intro" id="logo-container" class="brand-logo">
-      <div class="profile-pic" title="Back to Top">
-        <img src="assets/img/passport-new.jpg" alt="Ani Headshot">
-      </div>
-    </a>
-  </li>
-  <li><a href="#about"><i class="fas fa-user"></i> <span>About</span></a></li>
-  <li><a href="#experience"><i class="fas fa-briefcase"></i> <span>Experience</span></a></li>
-  <li><a href="#skills"><i class="fas fa-code"></i> <span>Skills</span></a></li>
-  <li><a href="#certifications"><i class="fas fa-certificate"></i> <span>Certifications</span></a></li>
-  <li><a href="#memberships"><i class="fas fa-users"></i> <span>Memberships</span></a></li>
-  <li><a href="#publications"><i class="fas fa-book"></i> <span>Publications</span></a></li>
-  <li><a href="#blogs"><i class="fas fa-pen-nib"></i> <span>Blogs</span></a></li>
-  <li><a href="#awards"><i class="fas fa-trophy"></i> <span>Awards</span></a></li>
-  <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i> <span>Recommendations</span></a></li>
-  <li><a href="#contact"><i class="fas fa-envelope"></i> <span>Contact</span></a></li>
-</ul>
+<!-- REPLACE ALL YOUR NAV SECTIONS WITH THIS -->
+<nav class="hide-on-small-only">
+  <ul id="nav-mobile" class="side-nav fixed table-of-contents">
+    <!-- Logo Section -->
+    <li class="logo">
+      <a href="#intro" id="logo-container" class="brand-logo">
+        <div class="profile-pic" title="Back to Top">
+          <img src="assets/img/passport-new.jpg" alt="Ani Headshot">
+        </div>
+      </a>
+    </li>
+    
+    <!-- Navigation Links - CONSISTENT FONT AWESOME ICONS -->
+    <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
+    <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
+    <li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
+    <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
+    <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
+    <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
+    <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
+    <li><a href="#awards"><i class="fas fa-trophy"></i><span>Awards</span></a></li>
+    <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i><span>Recommendations</span></a></li>
+    <li><a href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
+    <li><a href="assets/Anirudh Vemula_2025.pdf" target="_blank"><i class="fas fa-file-pdf"></i><span>Resume</span></a></li>
+  </ul>
+</nav>
 
+<!-- Mobile Navigation -->
+<nav class="hide-on-large only trigger z-depth-1">
+  <a href="#" data-activates="slide-out" class="button-collapse">
+    <i class="fas fa-bars"></i>
+  </a>
+  <div class="name-title">
+    <a id="name" href="#" class="teal-text">Anirudh Vemula, PE</a>
+    <span class="black-text">Project Manager</span>
+  </div>
+</nav>
 
-
-  <!-- Navigation Links -->
-  <li><a href="#about"><i class="material-icons">person</i> About</a></li>
-  <li><a href="#experience"><i class="material-icons">work</i> Experience</a></li>
-  <li><a href="#skills"><i class="material-icons">build</i> Skills</a></li>
-
-  <!-- New Sections -->
-  <li><a href="#certifications"><i class="material-icons">verified</i> Certifications</a></li>
-  <li><a href="#memberships"><i class="material-icons">group</i> Memberships</a></li>
-  <li><a href="#publications"><i class="material-icons">menu_book</i> Publications</a></li>
-  <li><a href="#blogs"><i class="material-icons">edit</i> Blogs & Articles</a></li>
-  <li><a href="#honors"><i class="material-icons">emoji_events</i> Honors & Awards</a></li>
-  <li><a href="#recommendations"><i class="material-icons">thumb_up</i> Recommendations</a></li>
-
-  <li><a href="#contact"><i class="material-icons">email</i> Contact</a></li>
-</ul>
-
-</ul>
-
-
-      <li class="logo">
-        <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
-          class="brand-logo grey-blue-text">
-          <img src="/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
-        </a>
-      </li>
-
-      <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
-      </li>
-
-      <li class="bold">
-        <!-- mdi-av-web small
-             mdi-av-my-library-books small-->
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
-      </li>
-
-      <li class="bold">
-        <!--
-        ICONS:
-        mdi-action-assessment
-        mdi-social-poll
-        mdi-av-equalizer
-        -->
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
-      </li>
-      
-      <li class="bold">
-        <!--
-        ICONS:
-        -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
-      </li>
-
-      <li class="bold">
-        <!-- 
-        1. mdi-communication-contacts
-        2. mdi-content-mail
-        3. mdi-communication-email
-        -->
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
-      </li>
-
-      <li class="bold">
-        <!--
-        ICONS:
-        1. mdi-action-description
-        2. mdi-file-folder
-        3. mdi-file-folder-open
-        4. mdi-file-attachment
-        5. mdi-file-folder-shared
-        -->
-        <a aria-label="Open Anirudh's resume in a new tab" href="assets/Anirudh Vemula_2025.pdf" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
-      </li>
-    </ul>
-  </nav>
-
-  <!-- Nav class 2 -->
-  <nav class="hide-on-large only trigger z-depth-1">
-    <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
-      class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-    <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Anirudh
-        Vemula, PE</a><span class="black-text">Project Manager</span>
-    </div>
-  </nav>
-
-  <!-- Nav class 3 -->
-  <nav class="hide-on-large only">
-    <ul id="slide-out" class="side-nav">
-      <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
-      </li>
-
-      <li class="bold">
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
-      </li>
-      <li class="bold">
-        <a aria-label="Open Anirudh's Resume in a new tab"
-          href="assets/Anirudh Vemula_2025.pdf" target="_blank"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
-      </li>
-    </ul>
-  </nav>
+<!-- Mobile Side Navigation -->
+<nav class="hide-on-large only">
+  <ul id="slide-out" class="side-nav">
+    <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
+    <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
+    <li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
+    <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
+    <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
+    <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
+    <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
+    <li><a href="#awards"><i class="fas fa-trophy"></i><span>Awards</span></a></li>
+    <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i><span>Recommendations</span></a></li>
+    <li><a href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
+    <li><a href="assets/Anirudh Vemula_2025.pdf" target="_blank"><i class="fas fa-file-pdf"></i><span>Resume</span></a></li>
+  </ul>
+</nav>
 
   <!-- Main Content-->
   <main>
