--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
   <!-- Navigation Menu-->
-<!-- REPLACE ALL YOUR NAV SECTIONS WITH THIS -->
+<!-- REPLACE YOUR ENTIRE NAVIGATION SECTION WITH THIS -->
 <nav class="hide-on-small-only">
   <ul id="nav-mobile" class="side-nav fixed table-of-contents">
-    <!-- Logo Section -->
     <li class="logo">
       <a href="#intro" id="logo-container" class="brand-logo">
         <div class="profile-pic" title="Back to Top">
@@ -74,8 +73,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </a>
     </li>
-    
-    <!-- Navigation Links - CONSISTENT FONT AWESOME ICONS -->
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
     <li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
@@ -101,7 +98,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </nav>
 
-<!-- Mobile Side Navigation -->
 <nav class="hide-on-large only">
   <ul id="slide-out" class="side-nav">
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
