--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40; font-family: Georgia, 'Times New Roman', serif;"></span></i></h1>
+              <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40; font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;"></span></i></h1>
 			  <h4>I'm Anirudh "Ani" Vemula, PE!</h4><br>
               <!-- <span class="teal"></span> -->
               <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
