--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ of each drug container to estimate the degradation of the drug.
 </section>
 
 <!-- HONORS & AWARDS -->
-<section id="honors" class="section">
+<section id="awards" class="section">
   <h3 class="page-title teal">Honors & Awards</h3>
   <div class="container">
     <div class="card">
