--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="social">
   <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
     <button class="icon-btn linkedin">
-      <i class="fab fa-linkedin"></i>
+      <i class="fa-brands fa-linkedin"></i>
     </button>
   </a>
   <a href="https://github.com/anirudhvemula/" target="_blank">
     <button class="icon-btn github">
-      <i class="fab fa-github"></i>
+      <i class="fa-brands fa-github"></i>
     </button>
   </a>
 </div>
@@ -157,10 +157,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </span>
               </a> -->
             </div>
-            <div class='buttons'>
+            <div class="intro-buttons">
+			  <button class="readme">Read More</button>
+			  <button class="contactme">Contact Me</button>
+			</div>
+			<!-- <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
               <a href="#contact" class="contactme">Contact Me</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
