--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
             </div>
 			<br><br>
-			<div class="social"><br><br>
-			<h8>Use side navigation or scroll down to continue reading...</h8><br><br>
-  <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
+			<div class="social">
+			  <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
     <button class="icon-btn linkedin">
       <i class="fa-brands fa-linkedin"></i>
     </button>
@@ -141,6 +140,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </button>
   </a>
 </div>
+			<h8>Please use side navigation bar or scroll down to continue reading...</h8><br><br>
+
 
 
               <!-- <a href="https://angel.co/u/anirudh_vemula" target="_blank">
