--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </button>
   </a>
 </div>
-			<h8>Please use side navigation bar or scroll down to continue reading...</h8><br><br>
-
-
+			<h8>Please use side navigation bar or scroll down to continue reading...</h8>
 
               <!-- <a href="https://angel.co/u/anirudh_vemula" target="_blank">
                 <button class="icon-btn angellist">
