--- a/index.html
+++ b/index.html
@@ -145,21 +145,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </span>
               </a> -->
             </div>
-			<div class="buttons">
-			  <a href="#about" class="readme">Read More</a>
-			  <a href="#contact" class="contactme">Contact Me</a>
-			</div>
-						<div class="social">
-			  <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
-    <button class="icon-btn linkedin">
-      <i class="fa-brands fa-linkedin"></i>
-    </button>
-  </a>
-  <a href="https://github.com/anirudhvemula/" target="_blank">
-    <button class="icon-btn github">
-      <i class="fa-brands fa-github"></i>
-    </button>
-  </a>
+			<div class="button-container">
+  <div class="buttons">
+    <a href="#about" class="readme">Read More</a>
+    <a href="#contact" class="contactme">Contact Me</a>
+  </div>
+  <div class="social">
+    <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
+      <button class="icon-btn linkedin">
+        <i class="fa-brands fa-linkedin"></i>
+      </button>
+    </a>
+    <a href="https://github.com/anirudhvemula/" target="_blank">
+      <button class="icon-btn github">
+        <i class="fa-brands fa-github"></i>
+      </button>
+    </a>
+  </div>
+</div>
 </div>
           </div>
         </div>
