--- a/index.html
+++ b/index.html
@@ -975,15 +975,14 @@ of each drug container to estimate the degradation of the drug.
         <p>
           <a aria-label="View Anirudh on GitHub" href="https://github.com/anirudhvemula" target="_blank"
             data-position="top" data-tooltip="View Anirudh on GitHub"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa-brands fa-github"></i><a
               aria-label="Anirudh on Github" href="https://github.com/anirudhvemula" class="hoverline"
               target="_blank">github.com/anirudhvemula</a></a>
         </p>
         <p>
           <a aria-label="View Anirudh on LinkedIn" href="https://linkedin.com/in/anirudh-vemula" target="_blank"
             data-position="top" data-tooltip="View Anirudh on LinkedIn"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Anirudh on LinkedIn" href="https://linkedin.com/in/anirudh-vemula"
+            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa-brands fa-linkedin"></i><a aria-label="Anirudh on LinkedIn" href="https://linkedin.com/in/anirudh-vemula"
               class="hoverline" target="_blank">Linkedin.com/in/anirudh-vemula</a></a>
         </p>
       </div>
