--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul id="nav-mobile" class="side-nav fixed table-of-contents">
     <li class="logo">
       <a href="#intro" id="logo-container" class="brand-logo">
-        <div class="profile-pic" title="Back to Top">
-          <img src="assets/img/passport-new.jpg" alt="Ani Headshot">
-        </div>
+        <div title="Back to Top" style="position: relative; width: 120px; height: 120px; margin: 0 auto; border: 4px solid rgba(0, 77, 64, 0.4); border-radius: 50%; overflow: hidden; display: flex; align-items: center; justify-content: center; background-color: #f5f5f5;">
+  <img src="assets/img/passport-new.jpg" alt="Ani Headshot" style="width: 100%; height: 100%; object-fit: cover; object-position: center; display: block;">
+</div>
       </a>
     </li>
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
-    <li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
+    <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
+	<li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
     <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
@@ -101,7 +102,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul id="slide-out" class="side-nav">
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
-    <li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
+    <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
+	<li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
     <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
