--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li class="logo">
       <a href="#intro" id="logo-container" class="brand-logo">
         <div title="Back to Top" style="position: relative; width: 120px; height: 120px; margin: 0 auto; border: 4px solid rgba(0, 77, 64, 0.4); border-radius: 50%; overflow: hidden; display: flex; align-items: center; justify-content: center; background-color: #f5f5f5;">
-  <img src="assets/img/passport-new.jpg" alt="Ani Headshot" style="width: 100%; height: 100%; object-fit: cover; object-position: center; display: block;">
+  <img src="/assets/img/passport-new.jpg" alt="Ani Headshot" style="width: 100%; height: 100%; object-fit: cover; object-position: center; display: block;">
 </div>
       </a>
     </li>
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
     <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
 	<li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
-    <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
+    <li><a href="#certifications"><i class="fas fa-scroll"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
     <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
     <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
 	<li><a href="#skills"><i class="fas fa-code"></i><span>Skills</span></a></li>
-    <li><a href="#certifications"><i class="fas fa-certificate"></i><span>Certifications</span></a></li>
+    <li><a href="#certifications"><i class="fas fa-scroll"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
     <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
