--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h1 style="color:#fff"><i><span class="typing" style="font-weight: 300; color:#004d40; font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;"></span></i></h1>
 			  <h4>I'm Anirudh "Ani" Vemula, PE!</h4><br>
               <!-- <span class="teal"></span> -->
-              <h5>A self-driven engineer and project leader with a systems mindset, quick to start and adapt, with a curious mind that enjoys coding, design, and solving complex real-world problems across disciplines.</h5>
+              <h5>I’m a self-driven engineer and project leader who thrives on learning and adapting quickly. I enjoy diving into new challenges, whether it’s coding, design, or managing complex projects, and I bring a systems mindset to everything I do. I’m curious by nature, comfortable working across different disciplines, and motivated by solving real-world problems in creative and practical ways.</h5>
             </div>
 			<br><br>
 
