--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul id="nav-mobile" class="side-nav fixed table-of-contents">
     <li class="logo">
       <a href="#intro" id="logo-container" class="brand-logo">
-        <div title="Back to Top" style="position: relative; width: 120px; height: 120px; margin: 0 auto; border: 4px solid rgba(0, 77, 64, 0.4); border-radius: 50%; overflow: hidden; display: flex; align-items: center; justify-content: center; background-color: #f5f5f5;">
-  <img src="/assets/img/passport-new.jpg" alt="Ani Headshot" style="width: 100%; height: 100%; object-fit: cover; object-position: center; display: block;">
-</div>
+        <div class="profile-pic" title="Back to Top">
+          <img src="/assets/img/passport-new.jpg" alt="Ani Headshot">
+        </div>
       </a>
     </li>
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
