--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
     <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
-	<li><a href="#skills"><i class="fas fa-brain"></i><span>Skills</span></a></li>
+	<li><a href="#skills"><i class="fas fa-tools"></i><span>Skills</span></a></li>
     <li><a href="#certifications"><i class="fas fa-scroll"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#about"><i class="fas fa-user"></i><span>About</span></a></li>
     <li><a href="#experience"><i class="fas fa-briefcase"></i><span>Experience</span></a></li>
     <li><a href="#projects"><i class="fas fa-sitemap"></i><span>Projects</span></a></li>
-	<li><a href="#skills"><i class="fas fa-brain"></i><span>Skills</span></a></li>
+	<li><a href="#skills"><i class="fas fa-tools"></i><span>Skills</span></a></li>
     <li><a href="#certifications"><i class="fas fa-scroll"></i><span>Certifications</span></a></li>
     <li><a href="#memberships"><i class="fas fa-users"></i><span>Memberships</span></a></li>
     <li><a href="#publications"><i class="fas fa-book"></i><span>Publications</span></a></li>
